--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,16 +1,15 @@
 .app {
   text-align: center;
-  background-color: var(--background);
-  color: var(--text-color);
+  width: 100%;
+  height: 100%;
 
   .header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem;
     border-bottom: var(--header-border) 1px solid;
-    width: calc(100% - 1rem);
+    min-height: var(--header-height);
 
     .title {
       font-size: 2.25rem;
@@ -18,5 +17,34 @@
   }
 
   .main {
+    display: flex;
+    max-width: var(--game-max-width);
+    margin: 0 auto;
+    height: calc(100% - var(--header-height) - 1px);
+
+    .game {
+      display: flex;
+      flex-direction: column;
+      width: var(--game-max-width);
+      justify-content: center;
+      align-items: center;
+      flex-grow: 1;
+      overflow: hidden;
+
+      .words {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+
+        flex: 9 1;
+      }
+
+      .keyboard {
+        height: 200px;
+        margin-bottom: 1.25px;
+      }
+    }
   }
 }
