--- a/src/components/Keyboard.module.scss
+++ b/src/components/Keyboard.module.scss
@@ -1,9 +1,38 @@
 .keyboard {
-  .row {
-    margin-top: 0.25rem;
-  }
+  width: 100%;
 
-  .key:not(:last-child) {
-    margin-right: 0.25rem;
+  .row {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 30%;
+
+    margin: 0 auto 8px;
+    touch-action: manipulation;
+    flex-direction: row;
+
+    &.middle {
+      width: 90%;
+    }
+
+    .key {
+      display: flex;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 0;
+      margin: 0 6px 0 0;
+
+      flex: 1;
+      text-transform: uppercase;
+      font-weight: 700;
+      user-select: none;
+      font-size: 0.8rem;
+
+      &:last-of-type {
+        margin: 0;
+      }
+    }
   }
 }
