--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,6 +3,9 @@
   width: 100%;
   height: 100%;
 
+  color: var(--text-color);
+  background: var(--background);
+
   .header {
     display: flex;
     flex-direction: row;
@@ -10,6 +13,7 @@
     justify-content: space-between;
     border-bottom: var(--header-border) 1px solid;
     min-height: var(--header-height);
+    font-weight: bold;
 
     .title {
       font-size: 2.25rem;
@@ -43,7 +47,7 @@
 
       .keyboard {
         height: 200px;
-        margin-bottom: 1.25px;
+        margin-bottom: 1.25rem;
       }
     }
   }
