--- a/src/components/Word.module.scss
+++ b/src/components/Word.module.scss
@@ -6,19 +6,40 @@
 
   .letter {
     display: inline-flex;
-    background-color: var(--letter-color);
-    border: 1px solid var(--letter-border);
-    box-sizing: border-box;
-    color: var(--letter-text-color);
-    font-size: 2rem;
-    font-weight: 700;
-    line-height: 1rem;
-    height: var(--letter-size);
-    width: var(--letter-size);
-    padding: 1px;
     text-transform: uppercase;
     vertical-align: middle;
     align-items: center;
     justify-content: center;
+    user-select: none;
+
+    height: var(--letter-size);
+    width: var(--letter-size);
+    box-sizing: border-box;
+    padding: 1px;
+
+    background-color: var(--letter-color);
+    border: 2px solid var(--letter-border);
+
+    color: var(--letter-text-color);
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1rem;
+
+    &:not([data-state="none"]) {
+      color: white;
+      border: none;
+    }
+
+    &[data-state="close"] {
+      background: var(--letter-close-color);
+    }
+
+    &[data-state="correct"] {
+      background: var(--letter-correct-color);
+    }
+
+    &[data-state="incorrect"] {
+      background: var(--letter-incorrect-color);
+    }
   }
 }
