--- a/src/index.scss
+++ b/src/index.scss
@@ -28,10 +28,10 @@ body {
   --header-border: black;
   --header-height: 60px;
 
-  /* Button */
-  --btn-text-color: black;
-  --btn-color: #d3d6da;
-  --btn-hover-color: #a1a3a6;
+  /* Key */
+  --key-text-color: black;
+  --key-color: #d3d6da;
+  --key-hover-color: #a1a3a6;
 
   /* Letter */
   --letter-color: white;
@@ -48,10 +48,10 @@ body {
   --text-color: #ffffff;
   --header-border: #363639;
 
-  /* Button */
-  --btn-text-color: #ffffff;
-  --btn-color: #818384;
-  --btn-hover-color: #a6a8aa;
+  /* Key */
+  --key-text-color: #ffffff;
+  --key-color: #818384;
+  --key-hover-color: #a6a8aa;
 
   /* Letter */
   --letter-color: transparent;
