--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -14,9 +14,15 @@
     border-bottom: var(--header-border) 1px solid;
     min-height: var(--header-height);
     font-weight: bold;
+    padding: 0 1rem;
 
     .title {
+      flex: 1;
       font-size: 2.25rem;
+    }
+
+    .menu {
+      flex-shrink: 1;
     }
   }
 
