--- a/src/components/Word.module.scss
+++ b/src/components/Word.module.scss
@@ -41,5 +41,20 @@
     &[data-state="incorrect"] {
       background: var(--letter-incorrect-color);
     }
+
+    &[data-animation="flip-in"] {
+      animation-name: FlipIn;
+      animation-duration: 250ms;
+      animation-timing-function: ease-in;
+    }
+  }
+}
+
+@keyframes FlipIn {
+  0% {
+    transform: rotateX(0);
+  }
+  100% {
+    transform: rotateX(-90deg);
   }
 }
