--- a/src/components/Word.module.scss
+++ b/src/components/Word.module.scss
@@ -1,8 +1,10 @@
 .word {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 0.25rem;
+  display: flex;
   margin-top: 0.25rem;
+  width: 100%;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
 
   .letter {
     display: inline-flex;
@@ -12,10 +14,12 @@
     justify-content: center;
     user-select: none;
 
-    height: var(--letter-size);
-    width: var(--letter-size);
+    width: 100%;
+    height: 100%;
+    max-height: var(--letter-size);
+    max-width: var(--letter-size);
     box-sizing: border-box;
-    padding: 1px;
+    padding: auto;
 
     background-color: var(--letter-color);
     border: 2px solid var(--letter-border);
@@ -25,13 +29,23 @@
     font-weight: 700;
     line-height: 1rem;
 
+    &::before {
+      content: "";
+      display: inline-block;
+      padding-bottom: 100%;
+    }
+
+    &:not(:last-child) {
+      margin-right: 0.25rem;
+    }
+
     &:not([data-state="none"]) {
       color: white;
       border: none;
     }
 
-    &[data-state="close"] {
-      background: var(--letter-close-color);
+    &[data-state="present"] {
+      background: var(--letter-present-color);
     }
 
     &[data-state="correct"] {
