Lots of changes, check word lists, overflow and more

--- a/src/components/Word.module.scss
+++ b/src/components/Word.module.scss
@@ -44,6 +44,10 @@
       border: none;
     }
 
+    &[data-state="none"] {
+      cursor: pointer;
+    }
+
     &[data-state="present"] {
       background: var(--letter-present-color);
     }
