--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -22,7 +22,17 @@
     }
 
     .menu {
+      display: flex;
       flex-shrink: 1;
+      width: 10%;
+
+      &.left {
+        justify-content: flex-start;
+      }
+
+      &.right {
+        justify-content: flex-end;
+      }
     }
   }
 
@@ -46,7 +56,7 @@
         flex-direction: column;
         width: 100%;
         align-items: center;
-        justify-content: center;
+        // justify-content: center;
 
         flex: 9 1;
 
