--- a/src/index.scss
+++ b/src/index.scss
@@ -74,7 +74,7 @@ body {
   --key-hover-color: #a6a8aa;
 
   /* Letter */
-  --letter-color: transparent;
+  --letter-color: var(--background);
   --letter-border: #3a3a3c;
   --letter-text-color: #ffffff;
 
